# autorouter

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  hint.md  pyproject.toml  readme2.md  广告词.md
app/: __init__.py  channel.py  config.py  features.py  heuristic.py  ml_router.py  observe.py  policy.py  router.py  session.py
app/ml/: __init__.py  artifacts.py  bge_onnx.py  bundle.py  core.py  features.py  heads.py  trajectory.py  types.py  v4_features.py
config/: connection.yaml  ml.yaml  models.yaml  observability.yaml  policy.yaml  strategies.yaml
models/v4.2_phase3_inference/features/: bge_pca.joblib  config.pkl  tfidf.pkl
models/v4.2_phase3_inference/mlp/: model.onnx  scaler.joblib
scripts/: check_admin_response.py  deploy.sh  fake_newapi.py  load_test.py  load_test_200.py  req_auto_code.json  req_code_stream.json  req_default.json  req_expert.json  req_fast.json  req_reason.json
tests/: test_release_paths.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  api.ts  app.css
web/src/lib/: LiveTest.svelte  LoginScreen.svelte  ModelSelect.svelte  dom.ts
web/src/tabs/: ConnectionTab.svelte  MlTab.svelte  ModelConfigTab.svelte  ObservabilityTab.svelte  PolicyTab.svelte  StrategiesTab.svelte
