[project]
name = "auto-router"
version = "0.1.0"
description = "new-api 伪渠道:接 model=auto → LLMRouter 选模型 → 回灌 new-api"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0.3",
]

# 说明:故意不依赖 llmrouter-lib 的全部包(torch/transformers/...)
# 当前 RulesRouter 只用 stdlib。Phase 2 换 ML router 时再加 sklearn/torch。

[tool.uv]
package = false
