[project]
name = "auto-router"
version = "0.1.0"
description = "LLM 伪渠道:接 model=auto → 路由选模型 → 回灌上游(支持任何 OpenAI 兼容接口)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0.3",
]

# 说明:默认只依赖 fastapi/uvicorn/httpx/pyyaml,保持轻量。
# ML 路由(加载 OpenSquilla 预训练 bundle)是可选能力,通过 `uv sync --extra ml` 启用。
# 全程不需要 torch —— BGE 走 ONNX(onnxruntime),分类器是 LightGBM。
[project.optional-dependencies]
ml = [
    "numpy>=1.26",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "scikit-learn>=1.3",
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
]

[tool.uv]
package = false
